--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  sci_tercen_client:
-    git:
-      ref: 1.1.0
-      url: https://github.com/tercen/sci_tercen_client
-      path: sci_tercen_client
+  # sci_tercen_client:
+  #   git:
+  #     ref: 1.1.0
+  #     url: https://github.com/tercen/sci_tercen_client
+  #     path: sci_tercen_client
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
