--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   file_picker: ^8.0.5
   list_picker: ^1.1.0
   web: ^0.5.1
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
