--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
       url: https://github.com/tercen/sci_tercen_client
       path: sci_http_client
 
+  tson:
+    git:
+      ref: 1.4.1
+      url: https://github.com/tercen/dtson
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
