--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   flutter_modal_dialog: ^0.0.4
   uuid: ^4.4.0
+  sn_progress_dialog: ^1.1.4
 
 dev_dependencies:
   flutter_test:
