--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   flutter_modal_dialog: ^0.0.4
   uuid: ^4.4.0
   sn_progress_dialog: ^1.1.4
+  json_string: ^3.0.1
 
 dev_dependencies:
   flutter_test:
