--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   uuid: ^4.4.0
   sn_progress_dialog: ^1.1.4
   json_string: ^3.0.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
